Fix build-breaking defects and cut dead code
The repository did not compile, and application.yml was not valid YAML, so
neither the app nor the test suite could run. Fixed those and removed the
unused code found while tracing the flow.

Fatal defects:
- MessageController called MessageStatus.isSuccess(), which does not exist
  (compile error). Now checks validationResult.
- application.yml logging pattern had unbalanced single quotes -> invalid
  YAML, app could not start.
- SUPPORTED_CURRENCIES listed "JOD" twice; Set.of rejects duplicates and
  threw at class init.
- Institution.supportedNetworks used @ElementCollection (join table) against
  a text[] column, failing ddl-auto: validate. Mapped as SQL ARRAY.
- Stateless JWT API had CSRF enabled, so every POST/PUT/DELETE returned 403.
- Test sources did not compile (missing imports, MessageRequest.builder()
  with no @Builder) and @DataJpaTest replaced the Testcontainers datasource.
- MessageValidationService silently passed blank required fields.

Cuts (no production callers):
- MessageType enum, FieldMapping and ValidationRule records
- MessageRepository.existsByMessageId, two Institution queries
- unused displayName/description on MessageStatus/Network/ValidationResultEnum
- duplicated response building in GlobalExceptionHandler
- dead locals and a duplicate Network.fromCode call in MessageCreationService

Also: DB credentials now come from env vars with local defaults, redundant
Spring defaults dropped from application.yml, and target/ is gitignored.

All 94 tests pass (previously the suite could not compile).

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>